# navimoderator-auto-clip

./: .gitignore  pyproject.toml
.devcontainer/: dev.Dockerfile  devcontainer.json  docker-compose.yaml
src/navimoderator-auto-clip/core/: factory.py
src/navimoderator-auto-clip/nodes/clipper/: export_node.py  extract_node.py
src/navimoderator_auto_clip/: workflow.py
src/navimoderator_auto_clip/core/: node.py
src/navimoderator_auto_clip/downloader/: downloader.py  youtube_downloader.py
src/navimoderator_auto_clip/nodes/clipper/: clip_node.py  download_video_node.py  process_node.py
src/navimoderator_auto_clip/platform/: platform_api_client_factory.py  platform_integration.py  twitch_api_client.py  youtube_api_client.py
src/navimoderator_auto_clip/subgraphs/: clip_suggestion_subgraph.py
src/navimoderator_auto_clip/subgraphs/nodes/: transcript_node.py
tests/nodes/: test_download_video_node.py
